# webba

./: 025615bd.md  README.md  SKILL.md  pyproject.toml
tests/: test_integration.py  test_webba.py
webba/: __init__.py  _utils.py  cache.py  fetch.py  search.py  skill.py
webba/plugins/: __init__.py  hermes_search.py
