[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webba"
version = "0.1.0"
description = "Zero-config web search: free-tier quota management, smart routing, any-URL fetching"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Karthik Rajgopal" }]

dependencies = [
    "fastcore>=1.7",
    "niquests>=3.0",
    "litesearch>=0.0.10",
    "contextkit>=0.0.10",
    "selectolax>=0.3",
    "duckduckgo-search>=6.0",
    "dockeasy>=0.0.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cdp = ["fastcdp>=0.1"]

[project.scripts]
webba = "webba.search:_cli"
webba-install-hermes = "webba.skill:_install_hermes_cli"

[project.entry-points."hermes_agent.plugins"]
webba-search = "webba.plugins.hermes_search"

[tool.hatch.build.targets.wheel]
packages = ["webba"]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]
